# Image_Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: request.json
scripts/: deploy-cloudrun.sh  docker-entrypoint.sh
src/image_agent/: api.py  auth.py  crew.py  dev_server.py  errors.py  llm.py  main.py  models.py  parsing.py  schemas.py  service.py  vision.py
src/image_agent/config/: agents.yaml  tasks.yaml
tests/: test_api.py
