[project]
name = "image_agent"
version = "0.1.0"
description = "image_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "fastapi>=0.137.1",
    "litellm>=1.84",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/image_agent"]

[project.scripts]
image_agent = "image_agent.main:run"
run_crew = "image_agent.main:run"
run_with_trigger = "image_agent.main:run_with_trigger"
dev-api = "image_agent.dev_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
